# marketplace-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  graph.mmd  pyproject.toml
app_storage/: seller_warehouse.duckdb
backend/app/: main.py
backend/app/agents/: competitor_agent.py  compliance_agent.py  critic_agent.py  final_answer_agent.py  graph.py  graph_state.py  hitl_agent.py  inventory_agent.py  listing_agent.py  planner_agent.py  pricing_agent.py  product_selector_agent.py  profile_agent.py  profit_agent.py  rag_agent.py  router_agent.py  sales_agent.py  state.py
backend/app/api/: router.py
backend/app/core/: config.py  llm.py  otel.py  prompt.py
backend/app/db/: chat_store.py  init_seller_warehouse.py  seller_repository.py  session.py
backend/app/observability/: domain_metrics.py  llm_obs.py  logging.py  metrics.py  middleware.py  otel.py
backend/app/rag/: chunker.py  index_builder.py  opensearch_indexer.py  store.py
backend/tests/: test_agent_schema_compat.py  test_graph_branching.py  test_llm_hybrid_failover.py  test_planner_action_normalization.py  test_rag_local_retrieval.py  test_router_branching.py
config/: agents.yaml  fees.yaml  models.yaml  rag.yaml
data/rag/: README.md
data/seller/: competitors.csv  inventory.csv  products.csv  reviews.csv  sales_history.csv
eval/: __init__.py  golden_scenarios.jsonl  rag_golden.jsonl  run_custom_evals.py
frontend/: streamlit_app.py
infra/: Dockerfile  docker-compose.yml  prometheus.yml
prompts/: critic_v1.md  final_answer_v1.md  planner_v1.md
(+46 files in other folders)
